wip: build add reservation page

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "HiltonRes",
-  "displayName": "HiltonRes"
+    "name": "HiltonRes",
+    "displayName": "Hilton Reservation App Code test"
 }
