--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "mobx-react": "^5.4.3",
     "native-base": "^2.11.0",
     "react": "16.6.3",
     "react-native": "0.58.5",
     "react-native-elements": "^1.0.0",
-    "react-native-vector-icons": "^6.3.0"
+    "react-native-gesture-handler": "^1.0.15",
+    "react-native-vector-icons": "^6.3.0",
+    "react-navigation": "^3.3.0"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "24.1.0",
     "eslint": "^5.14.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "jest": "24.1.0",
     "metro-react-native-babel-preset": "0.52.0",
