--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "graphql": "^14.1.1",
         "mobx-react": "^5.4.3",
         "native-base": "^2.11.0",
+        "prop-types": "^15.7.2",
         "react": "16.6.3",
         "react-apollo": "^2.4.1",
         "react-native": "0.58.5",
