--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react": "16.6.3",
         "react-apollo": "^2.4.1",
         "react-native": "0.58.5",
+        "react-native-date-picker": "^2.2.1",
         "react-native-elements": "^1.0.0",
         "react-native-gesture-handler": "^1.0.15",
         "react-native-vector-icons": "^6.3.0",
