wip: adding Formik library

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "apollo-boost": "^0.1.28",
+        "formik": "^1.5.1",
         "graphql": "^14.1.1",
         "mobx-react": "^5.4.3",
         "native-base": "^2.11.0",
