--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   },
   "dependencies": {
     "native-base": "^2.11.0",
-    "react": "16.6.3",
-    "react-native": "0.58.5",
-    "react-native-elements": "^1.0.0",
-    "react-native-vector-icons": "^6.3.0"
+    "react": "^16.12.0",
+    "react-native": "^0.61.5",
+    "react-native-elements": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
