--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "ios": "react-native run ios",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "library-watch": "watchman watch-del-all && wml start",
+    "lint": "eslint src/",
+    "nuke": "npm run nuke:project",
+    "nuke:all": "npm run nuke:derived-data && npm run nuke:project",
+    "nuke:derived-data": "scripts/nuke-derived-data-interactive.js app_mobile_jbhDrive",
+    "nuke:project": "scripts/nuke-project-dirs-interactive.js node_modules ios/Pods ios/build android/build android/app/build"
   },
   "dependencies": {
     "native-base": "^2.11.0",
